--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="stroke_width">2dp</dimen>
+    <dimen name="bottombar_height">65dp</dimen>
+
+    <!--Bottombar Library Dimensions-->
+    <dimen name="bb_height">56dp</dimen>
+    <dimen name="bb_default_elevation">8dp</dimen>
+    <dimen name="bb_fake_shadow_height">4dp</dimen>
 </resources>
