--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_main"
-        android:background="#3c3c3c"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -26,6 +25,7 @@
             android:gravity="center_vertical"
             app:bb_activeTabColor="@android:color/transparent"
             app:bb_inActiveTabAlpha="0.3"
+            android:background="@color/colorPrimary"
             app:bb_inActiveTabColor="@android:color/transparent"
             app:bb_tabXmlResource="@xml/main_bottombar_tab"
             app:bb_titleTextAppearance="@style/CustomTitleTextAppearance" />
