--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,22 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/mainFragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/activity_background"></LinearLayout>
+            android:background="@drawable/activity_background"
+            android:orientation="horizontal" />
 
         <com.roughike.bottombar.BottomBar
+            android:id="@+id/mainBottomBar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/bottombar_height"
+            android:background="@color/colorPrimary"
             android:gravity="center_vertical"
             app:bb_activeTabColor="@android:color/transparent"
             app:bb_inActiveTabAlpha="0.3"
-            android:background="@color/colorPrimary"
             app:bb_inActiveTabColor="@android:color/transparent"
             app:bb_tabXmlResource="@xml/main_bottombar_tab"
             app:bb_titleTextAppearance="@style/CustomTitleTextAppearance" />
