--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -13,14 +12,18 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
 
-        <FrameLayout
-            android:id="@+id/mainFragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/activity_background"
-            android:orientation="horizontal" />
+        <kr.edcan.cardline.views.AliveFragmentView
+        android:id="@+id/mainFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" />
 
+        <!--<android.support.v4.view.ViewPager-->
+            <!--android:id="@+id/mainPager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1" />-->
         <com.roughike.bottombar.BottomBar
             android:id="@+id/mainBottomBar"
             android:layout_width="match_parent"
@@ -32,5 +35,6 @@
             app:bb_inActiveTabColor="@android:color/transparent"
             app:bb_tabXmlResource="@xml/main_bottombar_tab"
             app:bb_titleTextAppearance="@style/CustomTitleTextAppearance" />
+
     </LinearLayout>
 </layout>
