--- a/app/src/main/res/menu/menu_myeditorpage.xml
+++ b/app/src/main/res/menu/menu_myeditorpage.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/settings"
-        android:title="설정"
+        android:title="@string/settings"
         android:icon="@drawable/btn_actionbar_editor_editorsettings"
         app:showAsAction="always" />
 </menu>
