--- a/app/src/main/res/menu/menu_newsfeed.xml
+++ b/app/src/main/res/menu/menu_newsfeed.xml
@@ -4,12 +4,12 @@
 
     <item
         android:id="@+id/newsfeed_alert"
-        android:title="알림"
+        android:title="@string/alert"
         android:icon="@drawable/btn_actionbar_feed_noti_on"
         app:showAsAction="always" />
     <item
         android:id="@+id/newsfeed_favlist"
-        android:title="즐겨찾기 목록"
+        android:title="@string/favorite_list"
         android:icon="@drawable/btn_actionbar_feed_favlist"
         app:showAsAction="always" />
 
