--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -4,5 +4,5 @@
 
     <item
         android:id="@+id/settings_info"
-        android:title="정보" />
+        android:title="@string/information" />
 </menu>
