--- a/app/src/main/res/menu/menu_myeditorpage.xml
+++ b/app/src/main/res/menu/menu_myeditorpage.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/myeditorpage_settings"
         android:title="@string/settings"
         android:icon="@drawable/btn_actionbar_editor_editorsettings"
         app:showAsAction="always" />
