--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,6 +5,9 @@
         <attr name="fullMode" format="reference|boolean" />
         <attr name="textThemeColor" format="reference|color" />
         <attr name="textThemeColorEnabled" format="reference|boolean"/>
+        <attr name="shadowEnabled" format="reference|boolean"/>
+        <attr name="shadowColor" format="reference|color"/>
+
     </declare-styleable>
     <declare-styleable name="BottomBar">
         <attr name="bb_tabXmlResource" format="reference" />
