[View] Adding Gradient Overlay of CartaTagView

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,8 +5,9 @@
         <attr name="fullMode" format="reference|boolean" />
         <attr name="textThemeColor" format="reference|color" />
         <attr name="textThemeColorEnabled" format="reference|boolean"/>
-        <attr name="shadowEnabled" format="reference|boolean"/>
-        <attr name="shadowColor" format="reference|color"/>
+        <attr name="enableGradient" format="reference|boolean"/>
+        <attr name="gradientStartColor" format="reference|color"/>
+        <attr name="gradientEndColor" format="reference|color"/>
 
     </declare-styleable>
     <declare-styleable name="BottomBar">
