--- a/app/src/main/res/layout/fragment_newsfeed.xml
+++ b/app/src/main/res/layout/fragment_newsfeed.xml
@@ -3,9 +3,10 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
 
-        <include layout="@layout/main_newsfeed_header"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/newsFeedRecyclerView"
             android:layout_width="match_parent"
