--- a/app/src/main/res/layout/main_newsfeed_header.xml
+++ b/app/src/main/res/layout/main_newsfeed_header.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:scrollbarSize="0dp"
         android:scrollbars="none">
 
@@ -27,7 +28,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/small_margin"
                 android:text="@string/today_suggestion"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:enableGradient="true"
+                app:fullMode="true"
+                app:gradientEndColor="@color/mainGradientEndColor"
+                app:gradientStartColor="@color/mainGradientStartColor" />
 
             <kr.edcan.cardline.views.CartaTagView
                 android:id="@+id/newsfeed_politics"
