--- a/app/src/main/res/layout/main_newsfeed_common_content.xml
+++ b/app/src/main/res/layout/main_newsfeed_common_content.xml
@@ -10,13 +10,21 @@
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
 
-        <ImageView
+        <android.support.v7.widget.CardView
             android:id="@+id/cardImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image01"
-            app:riv_corner_radius="20dp" />
+            android:layout_height="match_parent"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="1dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true">
+
+            <kr.edcan.cardline.views.CartaSquareView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image01" />
+        </android.support.v7.widget.CardView>
 
         <TextView
             android:id="@+id/cardTitle"
