--- a/app/src/main/res/layout/fragment_myeditor.xml
+++ b/app/src/main/res/layout/fragment_myeditor.xml
@@ -1,23 +1,14 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
-        android:background="#FFF"
         android:orientation="vertical">
 
-        <kr.edcan.cardline.views.CartaTagView
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingBottom="10dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="10dp"
-            android:text="오픈소스 라이센스"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:fullMode="true" />
-    </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/myEditorRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/activity_background" />
+    </LinearLayout>
 </layout>
