--- a/app/src/main/res/layout/notification_content.xml
+++ b/app/src/main/res/layout/notification_content.xml
@@ -60,6 +60,6 @@
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="#DDDDDD" />
+            android:background="@color/divider_color" />
     </RelativeLayout>
 </layout>
