--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="bb_darkBackgroundColor">#212121</color>
     <color name="bb_tabletRightBorderDark">#505050</color>
     <color name="alert_red">#EC5350</color>
+    <color name="divider_color">#DDDDDD</color>
 </resources>
