--- a/app/src/main/res/layout/myeditor_popular_list.xml
+++ b/app/src/main/res/layout/myeditor_popular_list.xml
@@ -22,5 +22,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:paddingLeft="@dimen/small_margin" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:background="@color/divider_color" />
     </LinearLayout>
 </layout>
