--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,12 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
 
-        <kr.edcan.cardline.views.AliveFragmentView
-        android:id="@+id/mainFragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/mainFragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
-        <!--<android.support.v4.view.ViewPager-->
-            <!--android:id="@+id/mainPager"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1" />-->
         <com.roughike.bottombar.BottomBar
             android:id="@+id/mainBottomBar"
             android:layout_width="match_parent"
