--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -22,6 +22,7 @@
             android:padding="16dp">
 
             <EditText
+                android:id="@+id/new_card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
