--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,8 @@
     <color name="alert_red">#EC5350</color>
     <color name="divider_color">#E6E6E6</color>
     <color name="commonTextColor">#B2B2B2</color>
+    <color name="fbColor">#3B579D</color>
+    <color name="fbColorPressed">#354685</color>
+    <color name="textColorDark">#616161</color>
+
 </resources>
