[AuthActivity] Configure Login/Register Flow

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,12 +18,12 @@
             android:singleLine="true" />
 
         <EditText
-            android:id="@+id/nicknameInput"
+            android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/login_register_et_input_bg"
-            android:hint="닉네이"
+            android:hint="이름"
             android:padding="16dp"
             android:singleLine="true" />
 
