--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3dc9bd</color>
 
     <color name="mainGradientStartColor">#5b8bf4</color>
     <color name="mainGradientEndColor">#3dc9bd</color>
