--- a/app/src/main/res/layout/item_show_card.xml
+++ b/app/src/main/res/layout/item_show_card.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="20dp"
+        android:padding="8dp"
         android:src="@drawable/btn_post_prev" />
 
     <ImageView
@@ -20,6 +21,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="20dp"
+        android:padding="8dp"
         android:src="@drawable/btn_post_next" />
 
 </RelativeLayout>
